# Minicode

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
dataset/: mincode_rl.jsonl  mincode_rl_combined.jsonl  mincode_rl_v2.jsonl  mincode_sft_combined.jsonl  mincode_sft_v1.jsonl  mincode_sft_v2.jsonl
docs/: communication-deep-dive.md  http-bridge-guide.md  phase1-report.md  phase3-rl-log.md  progress.md
eval/: e2e_demo.md  eval_full_sft.json  eval_mincode_sft.json  eval_mincode_v1.json  eval_mincode_v1_rl2_test_cases.json  eval_mincode_v1_rl_test_cases.json  eval_mincode_v1_test_cases.json  eval_mincode_v2_rl_test_cases.json  eval_mincode_v2_test_cases.json  test_cases.json  test_cases_v0.json
scripts/: eval_toolcall.py  generate_sft_data.py  plot_results.py  start_minimind_server.py  train_lora.py  train_rl.py
src/mincode/: __init__.py  __main__.py  agent.py  cli.py  commands.py  console.py  model_adapter.py  skills.py  system_prompt.py  tools.py
