[project]
name = "mincode"
version = "0.1.0"
description = "MiniMind + ApeCode: a small coding agent you can train from scratch"
readme = "CLAUDE.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
]
authors = [
    { name = "MinCode Team" }
]
license = { text = "Apache-2.0" }

[project.scripts]
mincode = "mincode.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["mincode"]

[tool.pytest.ini_options]
testpaths = ["tests"]
